feat: displaying plot on site

--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
     <div class="container bg-secondary text-white rounded " style="width: auto; padding:10px 10px 10px 10px; ">
         <div class="row g-3 align-items-center">
             <!-- Stock selection -->
-            <form method="POST" action="/test" name="stock_selection">
+            <form method="POST" action="/" name="stock_selection">
                 <div class="col-auto">
                     <label for="stock_select" class="col-form-label">Select stock</label>
                 </div>
@@ -87,6 +87,7 @@
 
         </div>
     </div>
+    <img src="{{ plot_img }}">
 </body>
 
 </html>
